@@ -1,3 +1,9 @@
+Mon Apr  1 10:12:44 1996  Richard Basch  <basch@lehman.com>
+
+	* loginpaths.h: Leading/trailing colons should not be there based
+	on the variable usage in the code.  Also, the tests for Solaris
+	were incorrect.
+
 Sat Mar 23 17:20:00 1996  Sam Hartman  <hartmans@tertius.mit.edu>
 
 	* krcp.c (des_write): Use krb5_net_write instead of write, because
